--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,7 +8,11 @@ layout: default
         $(document).ready(function(){
  $('.owl-carousel').owlCarousel({
     items:1,
+    video:true,
+	lazyLoad:true,
+	loop:true,
     margin:10,
+    center:true,
     autoHeight:true,
     autoplay:true,
     rewind:true
