--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,17 +5,22 @@ layout: default
   
 <script type="text/javascript">
 
-        $(document).ready(function(){
- $('.owl-carousel').owlCarousel({
+    $(document).ready(function(){
+$('.owl-carousel').owlCarousel({
     items:1,
     video:true,
 	lazyLoad:true,
 	loop:true,
     margin:10,
     center:true,
-    autoHeight:true,
-    autoplay:true,
-    rewind:true
+	responsive:{
+            480:{
+                items:2
+            },
+            600:{
+                items:4
+            }
+    }
 })
 });
 </script>
