--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,6 +13,7 @@ $('.owl-carousel').owlCarousel({
 	loop:true,
     margin:10,
     center:true,
+    autoHeight:true,
 	responsive:{
             480:{
                 items:2
