--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -14,13 +14,7 @@ $('.owl-carousel').owlCarousel({
     margin:10,
     center:true,
     autoHeight:true,
-	responsive:{
-            480:{
-                items:2
-            },
-            600:{
-                items:4
-            }
+    rewind:true,
     }
 })
 });
