--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,7 +15,7 @@ $('.owl-carousel').owlCarousel({
     center:true,
     autoHeight:true,
     rewind:true,
-    }
+    autoplay:true,    
 })
 });
 </script>
