--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,18 +6,20 @@ layout: default
 <script type="text/javascript">
 
     $(document).ready(function(){
-$('.owl-carousel').owlCarousel({
-    items:1,
-    video:true,
-	lazyLoad:true,
-	loop:true,
-    margin:10,
-    center:true,
-    autoHeight:true,
-    rewind:true,
-    autoplay:true,    
-})
-});
+	$('.owl-carousel').owlCarousel({
+		items:1,
+		video:true,
+		lazyLoad:true,
+		loop:true,
+		margin:10,
+		center:true,
+		autoHeight:true,
+		rewind:true,
+		autoplay:true,   
+		merge:true
+	})
+	});
+	
 </script>
 
   <header class="post-header">
