--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,11 @@
 
     <script type="text/javascript" src="{{ site.baseurl }}/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/js/owl.carousel.min.js"></script>
+	<script type="text/javascript">
+		function resizeIframe(obj){
+		obj.style.height = 0;
+		obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
+		}
+</script>
+
 </head>
