--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,10 +13,15 @@ layout: default
 		loop:true,
 		margin:10,
 		center:true,
-		autoHeight:true,
 		rewind:true,
 		autoplay:true,   
-		merge:true
+		merge:trueresponsive:{
+        700:{
+            mergeFit:true
+        },
+        360:{
+            mergeFit:false
+        }
 	})
 	});
 	
