--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -14,13 +14,15 @@ layout: default
 		margin:10,
 		center:true,
 		rewind:true,
-		autoplay:true,   
-		merge:trueresponsive:{
-        700:{
-            mergeFit:true
-        },
-        360:{
-            mergeFit:false
+		autoplay:true, 
+		responsiveClass:true, 
+        responsive:{
+            350:{
+                items:2
+            },
+            700:{
+                items:1
+            }
         }
 	})
 	});
