--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,11 +4,9 @@ layout: default
 <div class="post">
   
 <script type="text/javascript">
-
-	var owl = $(".owl-carousel");
 	
     $(document).ready(function(){
-	$(owl).owlCarousel({
+	$('.owl-carousel').owlCarousel({
 		items:1,
 		video:true,
 		lazyLoad:true,
