--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -214,7 +214,7 @@ font-size: 16px;
 
 .thumbnail{
     width: 100%;
-    height: 230px;
+    height: 100%;
     overflow: hidden;
     position: relative;
 }
