--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -199,6 +199,8 @@ font-size: 16px;
     max-width: 100%;
     height: 250px;
     vertical-align: middle;
+	margin-left: auto;
+	margin-right: auto;
     box-sizing: border-box;
     padding: 10px;
     float: left;
