--- a/lib/owl.carousel.css
+++ b/lib/owl.carousel.css
@@ -131,6 +131,7 @@
 .owl-carousel .owl-video-wrapper {
   position: relative;
   height: 100%;
+  width: 100%;
   background: #000; }
 
 .owl-carousel .owl-video-play-icon {
@@ -138,7 +139,7 @@
   height: 80px;
   width: 80px;
   left: 50%;
-  top: 50%;
+  top: 100%;
   margin-left: -40px;
   margin-top: -40px;
   background: url("owl.video.play.png") no-repeat;
