--- a/lib/owl.carousel.css
+++ b/lib/owl.carousel.css
@@ -158,6 +158,7 @@
   
 .owl-carousel .owl-video-tn {
   position: relative;
+  height: 361px;
   background-size: cover;
   padding-bottom: 56.25%; /* 16:9 */
 	padding-top: 25px;
