--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,14 +15,8 @@ layout: default
 			center:true,
 			rewind:true,
 			responsiveClass:true, 
-			responsive:{
-				350:{
-					items:2
-				},
-				700:{
-					items:1
-				}
-			}
+			width:700,
+			height:361
 		})
 	});
 	
