--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -203,7 +203,7 @@ font-size: 16px;
 	margin-right: auto;
     box-sizing: border-box;
     padding: 10px;
-    display: inline-block;
+    text-align:left;
     
     @media screen and (min-width: 500px) {
         max-width: 48%; 
